--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    /* background: linear-gradient(135deg, #d2dae0, #453057); */
     background-color: #d2dae0;
     padding-top: 20px;
     overflow: hidden;
@@ -65,7 +64,6 @@ a {
     color: blue;
     text-decoration: underline;
 }
-
 .flash-message {
     display: none;
     padding: 10px;
@@ -81,4 +79,52 @@ a {
 .flash-message.error {
     background-color: #dc3545;
     color: white;
+}
+.hidden {
+    display: none;
+}
+#result-container {
+    margin-top: 15px;
+}
+.input-wrapper {
+    display: flex;
+    align-items: center;
+    background: #f1efeb;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+    margin-top: 5px;
+    width: 75%;
+    margin: auto;
+}
+#short-url {
+    padding: 0px;
+    padding-left: 12px;
+    border: none;
+    font-size: 14px;
+    color: #333;
+    outline: none;
+    background: #f1efeb;
+}
+#copy-btn {
+    display: flex;
+    align-items: center;
+    background: #e29b43;
+    color: white;
+    border: none;
+    padding: 7.4px 2px;
+    cursor: pointer;
+    font-size: 12px;
+    position: relative;
+    transition: background 0.3s;
+}
+#copy-btn:hover {
+    background: #eda751;
+}
+#copy-icon {
+    font-size: 16px;
+}
+#copy-btn:hover::after {
+    opacity: 1;
+    visibility: visible;
 }
